# Embedded_Linux

ex2/: function.h
ex4/: CMakeLists.txt
ex4/src/: function.c  main.c
ex6/: CMakeLists.txt
ex6/debug/: CMakeCache.txt  Makefile  blinky.dis  blinky.elf  blinky.elf.map  blinky.uf2  cmake_install.cmake
ex6/debug/pico-sdk/: Makefile  cmake_install.cmake
ex6/debug/pico-sdk/docs/: Makefile  cmake_install.cmake
ex6/debug/pico-sdk/src/: Makefile  cmake_install.cmake
ex6/debug/pico-sdk/src/common/boot_picobin_headers/: Makefile
ex6/debug/pico-sdk/src/common/boot_picoboot_headers/: Makefile  cmake_install.cmake
ex6/debug/pico-sdk/src/common/boot_uf2_headers/: Makefile
ex6/debug/pico-sdk/src/common/hardware_claim/: Makefile
ex6/debug/pico-sdk/src/common/pico_base_headers/: Makefile
ex6/debug/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
ex6/debug/pico-sdk/src/common/pico_bit_ops_headers/: Makefile  cmake_install.cmake
ex6/debug/pico-sdk/src/common/pico_divider_headers/: Makefile
ex6/debug/pico-sdk/src/common/pico_stdlib_headers/: Makefile  cmake_install.cmake
ex6/debug/pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
ex6/debug/pico-sdk/src/common/pico_time/: Makefile
ex6/debug/pico-sdk/src/common/pico_usb_reset_interface_headers/: Makefile
ex6/debug/pico-sdk/src/common/pico_util/: Makefile  cmake_install.cmake
ex6/debug/pico-sdk/src/rp2040/boot_stage2/: Makefile  bs2_default.dis  bs2_default.elf  bs2_default_padded_checksummed.S  cmake_install.cmake
ex6/debug/pico-sdk/tools/: Makefile
ex6/src/: led.c
(+133 files in other folders)
